UI cahnge + add comments

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,12 @@ body {
   background-color: #F4AE4F;
 }
 
+.quantity-input::-webkit-inner-spin-button,
+.quantity-input::-webkit-outer-spin-button {
+  opacity: 1;
+  height: auto;
+}
+
 
 
 
